data/derived/fa15/progs/unify/prog1766.ml.out
Characters 207-208:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int * int -> int * int list -> int * int list
       but an expression was expected of type
         int * int -> int * int list -> int * int
       Type int list is not compatible with type int 
